--- a/vxquery-server/pom.xml
+++ b/vxquery-server/pom.xml
@@ -162,6 +162,11 @@
             <groupId>args4j</groupId>
             <artifactId>args4j</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>args4j</groupId>
+            <artifactId>args4j</artifactId>
+        </dependency>
     </dependencies>
 
     <reporting>
