--- a/vxquery-core/pom.xml
+++ b/vxquery-core/pom.xml
@@ -264,6 +264,7 @@
 
         <dependency>
             <groupId>org.apache.hyracks</groupId>
+            <artifactId>algebricks-common</artifactId>
         </dependency>
 
         <dependency>
